5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1756_1577.log
== TEST (2019-05-27 15:28:46) 
-- CODE:
from numoy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 6
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:07) 
-- CODE:
from numpy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
		 
d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 7
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:31) 
-- CODE:
from numpy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")

d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 7
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:39) 
-- CODE:
from numpy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
		 d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 6
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:45) 
-- CODE:
from numpy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
		 d=(a*(t**2)/2)+vo
		 t= array([arange(N)])
-- ERROR:
File "XXXX", line 6
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:29:59) 
-- CODE:
from numpy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
		 
d=(a*(t**2)/2)+vo
		 t= array([arange(N)])
-- ERROR:
File "XXXX", line 7
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:30:03) 
-- CODE:
from numpy import*

a= int(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
		 
d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 7
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:30:23) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
N= int(input("quant:")
		 
d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 7
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:34:38) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:")
		 
d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
File "XXXX", line 7
    d=(a*(t**2)/2)+vo
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:35:13) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input())

d=(a*(t**2)/2)+vo
t= array([arange(N)])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:36:47) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input())
t= array([arange(n)])

d=(a*(t**2)/2)+vo
print(d[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:39:25) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:"))
t= array([arange(n)])

d=(a*(t**2)/2)+vo
print(d[t])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:39:48) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:"))
t= array([arange(n)])

d=(a*(t**2)/2)+vo
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:41:06) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:"))
t= arange(n)
d=zeros(n)

d=(a*(t**2)/2)+vo
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:41:15) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:"))
t= arange(n)
d=zeros(n)

d=(a*(t**2)/2)+vo
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:41:45) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:"))
t= arange(n)
d=zeros(n)

d=(a*(t**2)/2)+vo*t
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:43:59) 
-- CODE:
from numpy import*

a=float(input("Aceleracao:"))
vo=float(input("Velocidade inicial:"))
n= int(input("quant:"))
t= arange(n)
d=zeros(n)

d=(a*(t**2)/2)+vo*t
print(d)
-- EXECUTION TIME:
0.555067
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
